--- a/index.html
+++ b/index.html
@@ -52,12 +52,52 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-            
+
+            <div class="home__container grid container">
+                <img src="assets/img/home-sushi-rolls.png" alt="home image" class="home__img">
+                <div class="home__data">
+                <h1 class="home__title"> Enjoy delicious
+                    <div>
+                        <img src="assets/img/home-sushi-title.png" alt="sushi title">Sushi food
+                    </div>
+                </h1>
+                <p class="home__description">
+                    Enjoy a good dinner with the best dishes in restaurant and improve your day.
+                </p>
+<a href="#" class="button">
+    Order now <i class="ri-arrow-right-line"></i>
+</a>
+
+                </div>
+            </div>
+            <img src="assets/img/leaf-branch-2.png" alt="" class="home__leaf-1">
+            <img src="assets/img/leaf-branch-4.png" alt="" class="home__leaf-2">
+
         </section>
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
-            
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <span class="section__subtitle">
+                        About us
+                    </span>
+                    <h2 class="section__title about__title">
+                       <div>
+                        We provide 
+                        <img src="assets/img/about-sushi-title.png" alt="">
+                       </div>
+                       Healthy food
+                    </h2>
+                <p class="about__description">
+                    Food comes to us from relatives , whether they have wings or roots. This is how we consider food, it also has a culture. It has a history that passes from generation to generate.
+                </p>
+                </div>
+
+<img src="assets/img/about-sushi.png" alt="" class="about__img">
+
+            </div>
+            <img src="assets/img/leaf-branch-1.png" alt="" class="about__leaf">
         </section>
 
         <!--==================== POPULAR ====================-->
