--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="nav__buttons">
           <!-- Theme change buttons -->
-          <!-- <i class="ri-moon-fill change-theme" id="theme-button"></i> -->
+          <i class="ri-moon-fill change-theme" id="theme-button"></i>
           <!-- Toggle button -->
           <div class="nav__toggle" id="nav-toggle">
             <i class="ri-apps-2-line"></i>
